--- a/viewer02.html
+++ b/viewer02.html
@@ -1496,14 +1496,31 @@ async function autoLoadDays(chart){
         titleText = `Historique Séchoir ${xx} - ${d.slice(6,8)}/${d.slice(4,6)}/${d.slice(0,4)}`;
       }
     } else {
-      const match = csvName.match(/^SA(\d+)_([0-9]{8})/);
-      if (match) {
-        const num = parseInt(match[1],10);
-        const d = match[2];
-        titleText = num>0 ? `Séchoir ${num} - ${d.slice(6,8)}/${d.slice(4,6)}/${d.slice(0,4)}` : `${d.slice(6,8)}/${d.slice(4,6)}/${d.slice(0,4)}`;
-        const numTwoDigits = String(num).padStart(2,'0');
-        pdfFileName = num>0 ? `Séchoir-${numTwoDigits}_${d}.pdf` : `${d}.pdf`;
-      }
+const match = csvName.match(/^SA(\d+)_([0-9]{8})/);
+if (match) {
+  const num = parseInt(match[1], 10);
+  const d = match[2];
+  const folderName = document.getElementById("currentFolderName").textContent.trim() || "SansNom";
+  const numTwoDigits = String(num).padStart(2, '0');
+
+  // 🔹 Titre visible en haut du PDF
+  titleText = num > 0
+    ? `${folderName} – Séchoir ${num} – ${d.slice(6,8)}/${d.slice(4,6)}/${d.slice(0,4)}`
+    : `${folderName} – ${d.slice(6,8)}/${d.slice(4,6)}/${d.slice(0,4)}`;
+
+  // 🔹 Nom du fichier PDF exporté
+  pdfFileName = num > 0
+    ? `${folderName}_Séchoir${numTwoDigits}_${d}.pdf`
+    : `${folderName}_${d}.pdf`;
+
+  // 🔹 Métadonnées PDF
+  pdf.setProperties({
+    title: `Courbes – ${folderName} – Séchoir ${num} – ${d.slice(6,8)}/${d.slice(4,6)}/${d.slice(0,4)}`,
+    subject: 'Export graphique CSV Séchoir',
+    author: 'SMES Explorer'
+  });
+}
+
     }
 
     const danger = getCSSVar('--danger') || '#d84315';
@@ -2033,6 +2050,8 @@ function showConfirm(message, onConfirm) {
   
 </body>
 </html>
+
+
 
 
 
