--- a/viewer02.html
+++ b/viewer02.html
@@ -199,7 +199,7 @@
       position: absolute;
       left: 10px;
       top: 10px;
-      font-size: 28px;           /* assez gros */
+      font-size: 22px;           /* assez gros */
       font-weight: bold;
       color: var(--accent);      /* couleur du thème */
       white-space: nowrap;
@@ -529,28 +529,54 @@ async function loadCSVFromDrive(){
   document.getElementById('exportPDF').style.display = "inline-block";
   document.getElementById('resetZoom').style.display = "inline-block";
 
-// 💾 Détermination du dossier courant uniquement
+// 💾 Détermination du dossier courant + chemin complet (identique à index03)
 try {
   const list = JSON.parse(localStorage.getItem("csvFilesList") || "[]");
   const f = list.find(x => x.id === baseFileId);
 
+  // 🔹 Trouver l'ID du dossier parent
   if (f && Array.isArray(f.parents) && f.parents.length > 0) {
-    currentFolderId = f.parents[0]; // dossier exact du CSV
-    console.log("📁 Dossier courant (exact):", currentFolderId);
+    currentFolderId = f.parents[0];
   } else {
-    console.warn("⚠️ Aucun dossier trouvé pour ce fichier, currentFolderId = null");
-    currentFolderId = null;
+    currentFolderId = localStorage.getItem("lastFolderId") || null;
   }
 
-// affiche le nom du dossier courant et mémorise le "chemin" texte
-const folder = list.find(x => x.id === currentFolderId);
-const folderName = folder ? folder.name : "(Dossier inconnu)";
-document.getElementById("currentFolderName").textContent = folderName;
+  // 🔹 Retrouver le dossier parent pour le nom
+  const folderObj = list.find(x => x.id === currentFolderId);
+  let folderName = folderObj ? folderObj.name : "(Dossier inconnu)";
 
-// 🔹 Met à jour le titre de la page avec le nom du dossier
-if (folderName) {
+  // 🔹 Récupérer chemin complet du dossier
+  let folderPath =
+    getParam("folderPath") ||
+    localStorage.getItem("currentFolderPath") ||
+    folderName;
+
+  // 🔹 On anime les flammes 🔥
+  const flameTitle = folderPath.replace(
+    /🔥/g,
+    '<span class="flame" title="Brûleur(s) en fonctionnement">🔥</span>'
+  );
+
+  const el = document.getElementById("currentFolderName");
+  if (el) el.innerHTML = flameTitle;
+
+  // 🔹 Maj du titre
   document.title = `Courbes – ${folderName}`;
+
+  // 🔹 Mémorisation globale
+  currentFolderPath = folderPath;
+  localStorage.setItem("currentFolderPath", folderPath);
+  localStorage.setItem("lastFolderId", currentFolderId || "");
+
+  console.log("[Viewer02] Dossier affiché :", folderPath);
+} catch (e) {
+  console.warn("⚠️ Erreur récupération dossier courant :", e);
 }
+
+
+
+
+
 
 
 // 🧭 on conserve au moins le nom du dossier comme chemin texte
@@ -638,11 +664,6 @@ setTimeout(() => {
     enrichRowsWithDate(csvData,baseDateYYYYMMDD);
     loadedDays.add(baseDateYYYYMMDD);
   }
-  } catch (e) {
-    console.error("Erreur dans loadCSVFromDrive :", e);
-    showError();
-  }
-  
 }
 
 
@@ -1503,26 +1524,42 @@ const match = csvName.match(/^SA(\d+)_([0-9]{8})/);
 if (match) {
   const num = parseInt(match[1], 10);
   const d = match[2];
-  const folderName = document.getElementById("currentFolderName").textContent.trim() || "SansNom";
-  const numTwoDigits = String(num).padStart(2, '0');
 
-  // 🔹 Titre visible en haut du PDF
+  // 🔹 Récupération du nom du dossier principal (comme avant)
+  const folderEl = document.getElementById("currentFolderName");
+  let folderName = folderEl ? folderEl.textContent.trim() : "SansNom";
+
+// 🔹 Suppression de tout pictogramme type emoji (ex: 📈, 📊, etc.)
+folderName = folderName.replace(/[📈📊📉🔥🗒️🚨✨⬅️📄🔄]/g, "").trim();
+
+
+  const dateFR = `${d.slice(6,8)}/${d.slice(4,6)}/${d.slice(0,4)}`;
+  const numTxt = num > 0 ? `Séchoir ${num}` : "";
+
+  // 🔸 Titre affiché dans le PDF (propre, sans flammes)
+  titleText = titleText.replace(/[📈📊📉🔥🗒️🚨✨⬅️📄🔄]/g, "").trim();
   titleText = num > 0
-    ? `${folderName} – Séchoir ${num} – ${d.slice(6,8)}/${d.slice(4,6)}/${d.slice(0,4)}`
-    : `${folderName} – ${d.slice(6,8)}/${d.slice(4,6)}/${d.slice(0,4)}`;
+    ? `${folderName} – ${numTxt} – ${dateFR}`
+    : `${folderName} – ${dateFR}`;
 
-  // 🔹 Nom du fichier PDF exporté
+  // 🔸 Nom de fichier PDF exporté (sécurisé)
+  const safeFolder = folderName
+    .replace(/[<>:"/\\|?*]/g, "_")
+    .replace(/\s+/g, "_");
+
   pdfFileName = num > 0
-    ? `${folderName}_Séchoir${numTwoDigits}_${d}.pdf`
-    : `${folderName}_${d}.pdf`;
+    ? `${safeFolder}_S${String(num).padStart(2, "0")}_${d}.pdf`
+    : `${safeFolder}_${d}.pdf`;
 
-  // 🔹 Métadonnées PDF
+  // 🔸 Métadonnées PDF
   pdf.setProperties({
-    title: `Courbes – ${folderName} – Séchoir ${num} – ${d.slice(6,8)}/${d.slice(4,6)}/${d.slice(0,4)}`,
+    title: `Courbes – ${folderName}${numTxt ? " – " + numTxt : ""} – ${dateFR}`,
     subject: 'Export graphique CSV Séchoir',
     author: 'SMES Explorer'
   });
 }
+
+
 
     }
 
@@ -2053,6 +2090,12 @@ function showConfirm(message, onConfirm) {
   
 </body>
 </html>
+
+
+
+
+
+
 
 
 
