--- a/viewer.html
+++ b/viewer.html
@@ -3,7 +3,10 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Traçabilité Séchoir</title>
+<title>Tableau</title>
+
+<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌽</text></svg>">
+  
 <style>
 :root{
   --bg:#fff5f5;
@@ -31,6 +34,20 @@ body{
 /* Header */
 .header{position:relative; display:flex; align-items:center; justify-content:center; margin:0 0 10px 0;}
 .header .logo{height:60px; width:auto;}
+  #folderName {
+  position: absolute;
+  left: 0;
+  top: 0;
+  font-size: clamp(14px, 2vw, 26px);
+  font-weight: bold;
+  color: var(--accent);
+  padding: 5px 10px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-width: 45vw;
+}
+
 #fileNameContainer{position:absolute; right:0; top:0; text-align:right;}
 #fileName,#lineCount{color:var(--danger);}
 #fileName{font-size:24px; font-weight:bold; white-space:nowrap; max-width:300px; overflow:hidden; text-overflow:ellipsis; display:none;}
@@ -111,6 +128,7 @@ thead th.sorted-desc::after{content:" ▼"; font-size:10px;}
 <body>
 
 <div class="header">
+  <div id="folderName"></div>
   <img src="img/logo.png" alt="Logo SMES France" class="logo" id="mainLogo"/>
   <div id="fileNameContainer">
     <div id="fileName"></div>
@@ -167,9 +185,7 @@ let currentIndex = parseInt(localStorage.getItem("csvFileIndex")||"0",10);
 // === Thèmes ===
 function setTheme(theme){
   const r=document.documentElement;
-  const logo=document.getElementById("mainLogo");
-  logo.style.display=(theme==="orange")?"block":"none";
-  localStorage.setItem("selectedTheme",theme);
+  localStorage.setItem("selectedTheme", theme);
 
   if(theme==="orange"){r.style.setProperty("--accent","#ff7043");r.style.setProperty("--accent-darker","#e64a19");r.style.setProperty("--accent-muted","#ffccbc");r.style.setProperty("--bg","#fff5f5");r.style.setProperty("--panel","#ffffff");r.style.setProperty("--sidebar-bg","#ffe5d9");r.style.setProperty("--danger","#d84315");r.style.setProperty("--text","#333");}
   if(theme==="blue"){r.style.setProperty("--accent","#2196f3");r.style.setProperty("--accent-darker","#1976d2");r.style.setProperty("--accent-muted","#bbdefb");r.style.setProperty("--bg","#e3f2fd");r.style.setProperty("--panel","#ffffff");r.style.setProperty("--sidebar-bg","#bbdefb");r.style.setProperty("--danger","#0d47a1");r.style.setProperty("--text","#0d47a1");}
@@ -177,6 +193,7 @@ function setTheme(theme){
   if(theme==="purple"){r.style.setProperty("--accent","#9c27b0");r.style.setProperty("--accent-darker","#6a1b9a");r.style.setProperty("--accent-muted","#e1bee7");r.style.setProperty("--bg","#f3e5f5");r.style.setProperty("--panel","#ffffff");r.style.setProperty("--sidebar-bg","#e1bee7");r.style.setProperty("--danger","#4a148c");r.style.setProperty("--text","#4a148c");}
   if(theme==="bordeaux"){r.style.setProperty("--accent","#800020");r.style.setProperty("--accent-darker","#4b0014");r.style.setProperty("--accent-muted","#d7a1a9");r.style.setProperty("--bg","#fff0f2");r.style.setProperty("--panel","#ffffff");r.style.setProperty("--sidebar-bg","#f3cdd3");r.style.setProperty("--danger","#600018");r.style.setProperty("--text","#4b0014");}
 }
+
 document.getElementById("secretBtn").onclick=()=>{const menu=document.getElementById("themeMenu"); if(menu.style.display==="block"){closeThemeMenu();}else{menu.style.display="block";resetThemeMenuTimer();}};
 function resetThemeMenuTimer(){clearTimeout(themeMenuTimer);themeMenuTimer=setTimeout(closeThemeMenu,10000);}
 function closeThemeMenu(){document.getElementById("themeMenu").style.display="none";clearTimeout(themeMenuTimer);}
@@ -198,6 +215,31 @@ function hideLoading(){ document.getElementById('loadingOverlay').style.display=
 async function loadCSV(){
   const fileId = new URLSearchParams(window.location.search).get('fileId');
   const fileName = new URLSearchParams(window.location.search).get('fileName');
+// 🔹 Déterminer le dossier parent comme dans viewer02 / index03
+try {
+  const list = JSON.parse(localStorage.getItem("csvFilesList") || "[]");
+  const fileEntry = list.find(f => f.id === fileId);
+
+  // Plusieurs sources possibles pour le chemin du dossier
+  let folderPath =
+    new URLSearchParams(window.location.search).get("folderPath") || // si transmis dans l’URL
+    (fileEntry && (fileEntry.folder || fileEntry.folderPath)) ||     // si stocké dans csvFilesList
+    localStorage.getItem("currentFolderPath") ||                     // dernier dossier ouvert
+    "";
+
+  // Afficher dans le header
+  const folderNameEl = document.getElementById("folderName");
+  if (folderNameEl) folderNameEl.textContent = folderPath || "";
+
+// 🔹 Met à jour le titre de l’onglet navigateur
+document.title = `Tableau – ${folderPath || fileName || "CSV"}`;
+
+  
+} catch (e) {
+  console.warn("Impossible de déterminer le dossier :", e);
+}
+
+
   const fileNameDiv = document.getElementById('fileName');
   const lineCountDiv = document.getElementById('lineCount');
   const container = document.getElementById('tableContainer');
@@ -588,30 +630,46 @@ document.getElementById("exportPDF").addEventListener("click",()=>{
     parents = parts[0];
   }
 
-  // Construire titre lisible + nom fichier PDF
-  let titleText = csvName.replace(/\.csv$/i,"");
-  let pdfFileName = csvName.replace(/\.csv$/i,".pdf");
+// 🔹 Construction du titre et du nom de fichier PDF (identique à viewer02)
+let titleText = "";
+let pdfFileName = "";
+let folderName = (document.getElementById("folderName")?.textContent || "").trim();
+folderName = folderName.replace(/[📈📊📉🔥🗒️🚨✨⬅️📄🔄]/g, "").trim(); // nettoyage emoji & symboles
 
-  if(csvName.startsWith("Z")){
-    const matchZ = csvName.match(/^Z\d+(\d{2})_(\d{8})/);
-    if(matchZ){
-      const xx = parseInt(matchZ[1],10);
-      const d = matchZ[2];
-      const numTwoDigits = String(xx).padStart(2,'0');
-      titleText = `Historique Séchoir ${xx} - ${d.slice(6,8)}/${d.slice(4,6)}/${d.slice(0,4)}`;
-      pdfFileName = `Historique_Séchoir${numTwoDigits}_${d}.pdf`;
-    }
+if (csvName.startsWith("Z")) {
+  // === Fichier type Historique Z ===
+  const matchZ = csvName.match(/^Z\d+(\d{2})_(\d{8})/);
+  if (matchZ) {
+    const num = parseInt(matchZ[1], 10);
+    const d = matchZ[2];
+    const dateFR = `${d.slice(6, 8)}/${d.slice(4, 6)}/${d.slice(0, 4)}`;
+    titleText = `Historique Séchoir ${num} – ${dateFR}`;
+    pdfFileName = `Z3_S${String(num).padStart(2, "0")}_${d}.pdf`;
   } else {
-    const match = csvName.match(/^SA(\d+)_([0-9]{8})/);
-    if(match){
-      const num = parseInt(match[1],10);
-      const d = match[2];
-      titleText = num>0 ? `Séchoir ${num} - ${d.slice(6,8)}/${d.slice(4,6)}/${d.slice(0,4)}`
-                        : `${d.slice(6,8)}/${d.slice(4,6)}/${d.slice(0,4)}`;
-      const numTwoDigits = String(num).padStart(2,'0');
-      pdfFileName = num>0 ? `Séchoir-${numTwoDigits}_${d}.pdf` : `${d}.pdf`;
-    }
+    titleText = csvName.replace(/\.csv$/i, "");
+    pdfFileName = csvName.replace(/\.csv$/i, ".pdf");
   }
+} else {
+  // === Fichier type Séchoir SA ===
+  const match = csvName.match(/^SA(\d+)_([0-9]{8})/);
+  if (match) {
+    const num = parseInt(match[1], 10);
+    const d = match[2];
+    const dateFR = `${d.slice(6, 8)}/${d.slice(4, 6)}/${d.slice(0, 4)}`;
+    const numTxt = num > 0 ? `Séchoir ${num}` : "";
+    titleText = folderName
+      ? `${folderName} – ${numTxt} – ${dateFR}`
+      : `${numTxt} – ${dateFR}`;
+    const safeFolder = folderName.replace(/[<>:"/\\|?*]/g, "_").replace(/\s+/g, "_");
+    pdfFileName = num > 0
+      ? `${safeFolder}_S${String(num).padStart(2, "0")}_${d}.pdf`
+      : `${safeFolder}_${d}.pdf`;
+  } else {
+    titleText = csvName.replace(/\.csv$/i, "");
+    pdfFileName = csvName.replace(/\.csv$/i, ".pdf");
+  }
+}
+
 
   // Couleur danger du thème actif
   function getCSSVar(name){
@@ -674,6 +732,13 @@ window.onload=()=>{
 </script>
 </body>
 </html>
+
+
+
+
+
+
+
 
 
 
